# internal/api/oas_response_decoders_gen.go
@@ -417,7 +417,7 @@ func decodeListClustersResponse(resp *http.Response) (res []string, _ error) {
 	return res, validate.UnexpectedStatusCodeWithResponse(resp)
 }
 
-func decodeListGroupsResponse(resp *http.Response) (res []string, _ error) {
+func decodeListGVKsResponse(resp *http.Response) (res []GVKInfo, _ error) {
 	switch resp.StatusCode {
 	case 200:
 		// Code 200.
@@ -433,71 +433,11 @@ func decodeListGroupsResponse(resp *http.Response) (res []string, _ error) {
 			}
 			d := jx.DecodeBytes(buf)
 
-			var response []string
+			var response []GVKInfo
 			if err := func() error {
-				response = make([]string, 0)
+				response = make([]GVKInfo, 0)
 				if err := d.Arr(func(d *jx.Decoder) error {
-					var elem string
-					v, err := d.Str()
-					elem = string(v)
-					if err != nil {
-						return err
-					}
-					response = append(response, elem)
-					return nil
-				}); err != nil {
-					return err
-				}
-				if err := d.Skip(); err != io.EOF {
-					return errors.New("unexpected trailing data")
-				}
-				return nil
-			}(); err != nil {
-				err = &ogenerrors.DecodeBodyError{
-					ContentType: ct,
-					Body:        buf,
-					Err:         err,
-				}
-				return res, err
-			}
-			// Validate response.
-			if err := func() error {
-				if response == nil {
-					return errors.New("nil is invalid value")
-				}
-				return nil
-			}(); err != nil {
-				return res, errors.Wrap(err, "validate")
-			}
-			return response, nil
-		default:
-			return res, validate.InvalidContentType(ct)
-		}
-	}
-	return res, validate.UnexpectedStatusCodeWithResponse(resp)
-}
-
-func decodeListKindsResponse(resp *http.Response) (res []KindInfo, _ error) {
-	switch resp.StatusCode {
-	case 200:
-		// Code 200.
-		ct, _, err := mime.ParseMediaType(resp.Header.Get("Content-Type"))
-		if err != nil {
-			return res, errors.Wrap(err, "parse media type")
-		}
-		switch {
-		case ct == "application/json":
-			buf, err := io.ReadAll(resp.Body)
-			if err != nil {
-				return res, err
-			}
-			d := jx.DecodeBytes(buf)
-
-			var response []KindInfo
-			if err := func() error {
-				response = make([]KindInfo, 0)
-				if err := d.Arr(func(d *jx.Decoder) error {
-					var elem KindInfo
+					var elem GVKInfo
 					if err := elem.Decode(d); err != nil {
 						return err
 					}
